# usable-otr

./: CMakeLists.txt  Dockerfile  Makefile  README.md
include/: client.hpp  crypt.hpp  keyex.hpp  message.hpp  messageops.hpp  readwrite.hpp  server.hpp  tdh.hpp
src/: denim.cpp
